<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneBill</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="login_account_hint">请输入登陆账号，有数字和字母组成</string>
    <string name="login_password_hint">请输入6位密码</string>
    <string name="login_checkbox">记住用户名</string>
    <string name="login_login">登陆</string>
    <string name="longin_language">请选择所使用的语言：</string>
    <string name="login_register">新用户注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="protocol1">阅读并接受《</string>
    <string name="protocol2">用户服务协议</string>
    <string name="protocol3">》</string>
    <string name="register_register">注册</string>
    <string name="register_text1">请输入登录账号</string>
    <string name="register_text1_hint">由数字和字母组成</string>
    <string name="register_text2">请输入6位密码</string>
    <string name="register_text3">请再次输入6位密码</string>
    <string name="register_text4">请输入常用手机号码</string>
    <string name="register_text5">请输入常用真实姓名</string>
    <string name="register_code">获取注册码</string>
    <string name="register_error1">注册信息有误：账号不能为空</string>
    <string name="register_error2">注册信息有误：账号长度不能小于6位</string>
    <string name="register_error3">注册信息有误：密码不能为空</string>
    <string name="register_error4">注册信息有误：密码长度必须是6位</string>
    <string name="register_error5">注册信息有误：确认密码不能为空</string>
    <string name="register_error6">注册信息有误：确认密码长度必须是6位</string>
    <string name="register_error7">注册信息有误：两次密码输入必须相同</string>
    <string name="register_error8">注册信息有误</string>
    <string name="register_error9">注册信息有误：电话号码长度必须是11位</string>
    <string name="register_error10">注册信息有误：用户姓名不能为空</string>
    <string name="register_error11">注册信息有误：验证码不能为空</string>
    <string name="open_business">业务开通</string>
    <string name="open_business_tx">如果您选择了要开通的运营商，则代表您拥有了办理该运营商充 值业务的权限。\n\n请选择您要开通的业务的运营商：</string>
    <string name="open_business_chbtn_1">老挝电信</string>
    <string name="open_business_chbtn_2">ETL</string>
    <string name="open_business_open">开通</string>
    <string name="open_business_cancel">取消</string>
    <string name="open_business_success_tx">业务已经成功开通，系统将会自动分配账号，用户凭此账号到 电信营业厅进行现金充值，以作为开张充值业务的资金使用。 用户在开通后10日内，账户余额始终未零，系统将会对此账号做回收处理。请及时到营业厅办理充值业务。敬请留意！</string>
    <string name="open_business_success_tx1">运营商名称：</string>
    <string name="open_business_success_tx2">开户账号：</string>
    <string name="confirm">确定</string>
    <string name="forget_account">请输入登录帐号</string>
    <string name="forget_code_hint">验证码</string>
    <string name="forget_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="forget_forget">忘记密码</string>
    <string name="forget_pwd">请在下面输入新的登录密码，密码为6位数</string>
    <string name="forget_pwd_again">请再次输入新密码</string>
    <string name="submit">提交</string>
    <string name="forget_success_tx">密码修改成功，请您妥善保存</string>
    <string name="forget_success_back">返回登录页面</string>
    <string name="reset_pwd">重置密码</string>
    <string name="welcome_title">欢迎使用话费充值业务</string>
    <string name="wel_net">联网充值</string>
    <string name="wel_sale">充值卡销售</string>
    <string name="wel_sms">短信充值</string>
    <string name="wel_detail">用户明细</string>
    <string name="wel_query">统计查询</string>
    <string name="net_user_phone">请输入用户手机号</string>
    <string name="net_chose">请选择充值金额：</string>
    <string name="net_tips">重要提示：充值成功后，用户将接收到充值短信通知！</string>
    <string name="num10000">1000</string>
    <string name="num20000">20000</string>
    <string name="num25000">25000</string>
    <string name="num50000">50000</string>
    <string name="num100000">100000</string>
    <string name="num150000">150000</string>
    <string name="num200000">200000</string>
    <string name="recharge_immediately">立刻充值</string>
    <string name="card_recharge_immediately">立即购卡</string>
    <string name="net_recharge_user_phone">用户手机号：</string>
    <string name="net_recharge_value">本次充值金额 ：</string>
    <string name="net_recharge_yuan">	元</string>
    <string name="net_recharge_success">充值成功！</string>
    <string name="net_recharge_print">打印凭条</string>
    <string name="back">返回</string>
    <string name="net_recharge_fail">充值失败！</string>
    <string name="net_recharge_error">错误报告：</string>
    <string name="query_topbar_tx1">联网充值交易</string>
    <string name="query_topbar_tx2">充值卡销售交易</string>
    <string name="query_chose_time">请选择查询的时间段：</string>
    <string name="query_tips">提示：商户最多可查询三个月的交易明细数据</string>
    <string name="cash_query">联网充值查询</string>
    <string name="query_start_date">选取开始日期</string>
    <string name="query_end_date">选取结束日期</string>
    <string name="query_result_tx1">查询时间段：</string>
    <string name="query_result_tx2">至</string>
    <string name="query_result_col1">用户手机号</string>
    <string name="query_result_col2">充值时间</string>
    <string name="query_result_col3">充值金额</string>
    <string name="card_recharge_tx1">请输入购卡张数：</string>
    <string name="card_recharge_tx2">请选择卡面额：</string>
    <string name="card_tips">重要提示：充值卡购买成功后，用户将接收到充值卡密码短信通知，请妥善保管！</string>
    <string name="card_num">您购买充值卡张数：</string>
    <string name="card_zhang">张</string>
    <string name="card_confirm_moneny">充值卡面额：</string>
    <string name="card_confirm_sum">购买充值卡总金额：</string>
    <string name="card_success">购买充值卡成功</string>
    <string name="card_failed">充值卡购买失败！</string>
    <string name="card_fail_reason">失败原因:</string>
    <string name="card_query">充值卡销售查询</string>
    <string name="detail">详情</string>
    <string name="card_query_data">购买日期：</string>
    <string name="card_query_used">使用张数：</string>
    <string name="balance_title">统计查询</string>
    <string name="balance_account">商户账号：</string>
    <string name="balance_address">商户地址：</string>
    <string name="balance_tips">提示：商户最多可查询7日的交易明细数据</string>
    <string name="balance_left">账户余额：</string>
    <string name="balance_time">统计时段：</string>
    <string name="balance_time_2">统计时间：</string>
    <string name="balance_col_1">现金充值总笔数</string>
    <string name="balance_col_2">现金充值总额</string>
    <string name="balance_col_3">售卡总张数</string>
    <string name="balance_col_4">售卡总金额</string>
    <string name="setting">设置</string>
    <string name="setting_line_1">业务开通</string>
    <string name="setting_line_2">用户信息</string>
    <string name="setting_line_3">密码重置</string>
    <string name="setting_line_4">检查版本更新</string>
    <string name="setting_line_5">帮助</string>
    <string name="setting_line_6">关于</string>
    <string name="setting_line_7">退出</string>
    <string name="open_business_setting_tx">用户在开通新业务之后，系统将会自动分配账号，用户凭此账号到电信营业厅进行现金充值，以作为开展 充值业务的资金使用。用户在开通后10日内，账户余额始终未零，系统将会对此账号做回收处理。请及时到营业厅办理充值业务。敬请留意！</string>
    <string name="open_business_setting_title_1">运营商名称：老挝电信</string>
    <string name="open_business_setting_title_11">运营商名称：ETL</string>
    <string name="open_business_setting_title_2">开户账号：</string>
    <string name="open_business_setting_title_3">账户余额：</string>
    <string name="open_business_setting_title_4">账户状态：未开通</string>
    <string name="open_business_setting_title_5">账户状态：已开通</string>
    <string name="open_business_open_name">将要开通的运营商：</string>
    <string name="user_info_name">用户姓名：</string>
    <string name="user_info_phone">常用电话：</string>
    <string name="user_info_open">已开通业务：</string>
    <string name="user_info_operator">运营商名称：</string>
    <string name="user_info_account">用户账号：</string>
    <string name="user_info_modify">信息修改</string>
    <string name="about_1">应用版本号：V1.0</string>
    <string name="about_2">终端ID：</string>
    <string name="about_3">客户服务：</string>
    <string name="about_4">咨询电话：02058593323</string>
    <string name="about_5">网址：www.recmobile.com</string>
    <string name="about_6">SPK公司 版权所有</string>
    <string name="about_7">Copyright @2015–2020 SPK All Rights Reserved</string>
    <string name="about">关于</string>
    <string name="info_modify_tips">请输入新手机号码接收到的短信验证码</string>
    <string name="info_modify">修改信息</string>
    <string name="net_charge">联网充值</string>
    <string name="card_recharge">充值卡销售</string>
    <string name="forget_getback">找回密码</string>
    <string name="user_info_title">用户信息</string>
    <string name="chose_date">请选择日期</string>
    <string name="balance_name">商户名称：</string>
    <string name="card_query_detail_sms">(10)短信重发</string>
    <string name="help">帮助</string>
    <string name="help_content">1、注册时联系电话输入错误，如何修改？\n用户可以登陆客户端以后，在设置功能中的用户信息功能中可以进行修改。\n2、注册时，如果业务开通失败了，是否还能继续开通？\n用户可以登陆客户端以后，在设置功能中，通过业务开通功能，用户可以选择将要开通的运营商。\n3、注册时填写常用联系方式重要么？\n用的联系方式十分重要，此手机号码是用户找回密码、修改信息、业务开通必不可少的关键信息，所以，在进行用户注册的时候必须输入可用的手机号码。同时，在用户更换手机号码以后，一定要在用户信息修改中，对用户手机号码进行更新。\n4、用户如何查看开户账号和账户余额？\n用户可以在设置中的业务开通功能中，可以查看用户已经开通的运营商、开户账号、账户当前余额等信息。\n5、用户余额不足改如何处理？\n当用户发生余额不足的情况，需要平台已经在运营商申请的开户账号到指定营业网点进行现金充值，开户账号可以在业务开通中找到。\n6、用户注册10日以后，为什么还要在运营商开通业务？\n用户在成功注册并开通了某个运营商的业务后，如果在10日内始终没有为开户的账号做现金充值，系统将会对所分配的账号所回收处理，用户如果需要办理业务，将通过业务开通功能向具体的运营商申请账号。</string>

</resources>