<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        layout="@layout/top_bar" />

    <TextView
        android:id="@+id/balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/include1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/balance_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/balance_name"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="13"
        android:hint="@string/net_user_phone"
        android:text="@string/balance_name" />

    <TextView
        android:id="@+id/balance_account"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/balance_name"
        android:layout_below="@+id/include1"
        android:layout_marginTop="15dp"
        android:ems="13"
        android:hint="@string/net_user_phone"
        android:text="@string/balance_account"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/balance_left"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/balance_name"
        android:layout_below="@+id/balance_name"
        android:layout_marginTop="5dp"
        android:ems="13"
        android:visibility="gone"
        android:hint="@string/net_user_phone"
        android:text="@string/balance_left" />

    <TextView
        android:id="@+id/balance_time_1"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/balance_left"
        android:layout_below="@+id/balance_left"
        android:hint="@string/net_user_phone"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:text="@string/balance_time" />

    <TextView
        android:id="@+id/balance_time_2"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/balance_time_1"
        android:layout_below="@+id/balance_time_1"
        android:ems="13"
        android:hint="@string/net_user_phone"
        android:paddingTop="5dp"
        android:text="@string/balance_time_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/balance_time_2"
        android:layout_margin="20dp"
        android:background="#c1beba"
        android:paddingBottom="1dp" >

        <LinearLayout
            android:id="@+id/query_result_list_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="1dp" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/balance_col_1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/balance_col_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/balance_col_3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/balance_col_4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/balance_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/query_result_list_top"
            android:layout_margin="1dp" >

            <TextView
                android:id="@+id/balance_value_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance_value_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/query_result_col1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance_value_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/query_result_col2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance_value_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#f4f1ee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a8a39d"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>