<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        layout="@layout/top_bar" />

    <TextView
        android:id="@+id/balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/include1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/open_business"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/wel_tx2"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/open_business_tx"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wel_tx2"
        android:layout_below="@+id/wel_tx2"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/open_business_chbtn_1"
            style="@style/text_style_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_business_chbtn_1" />

        <RadioButton
            android:id="@+id/open_business_chbtn_2"
            style="@style/text_style_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_business_chbtn_2" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/open_business_open"
            style="@style/button_style_1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="open"
            android:text="@string/open_business_open" />

        <Button
            android:id="@+id/open_business_cancel"
            style="@style/button_style_1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/open_business_cancel" />

    </LinearLayout>

</RelativeLayout>