<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        layout="@layout/top_bar" />

    <TextView
        android:id="@+id/balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/include1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/open_business"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/will_open_name"
        style="@style/text_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/code_layout"
        android:layout_alignLeft="@+id/code_layout"
        android:layout_marginBottom="20dp"
        android:text="@string/open_business_open_name" />

    <RelativeLayout
        android:id="@+id/code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/will_open_code"
            style="@style/edittext_style_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/forget_code_hint"
            android:maxLength="4" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/forget_code"
            style="@style/button_style_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/will_open_code"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/will_open_code"
            android:text="@string/forget_code"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/open_business_open"
            style="@style/button_style_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="open"
            android:text="@string/open_business_open" />

        <Button
            android:id="@+id/open_business_cancel"
            style="@style/button_style_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/open_business_cancel" />
    </LinearLayout>

</RelativeLayout>